include_directories("${CMAKE_SOURCE_DIR}/include")

add_executable(
  client
  "client.cpp"
)
add_executable(
  TcpServerExample
  "TcpServerExample.cpp"
)
add_executable(
  ReactorExample
  "ReactorExample.cpp"
)
add_executable(
  ThreadPoolExample
  "ThreadPoolExample.cpp"
)
add_executable(
  LogExample
  "LoggerExample.cpp"
)
